--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio website</title>
+	<title>Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,12 +15,11 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">BenIraa<span>Protofilo</span></h2>
+			<h2 class="logo">Aima<span>Joffery</span></h2>
 			<ul>
 				<li><a href="">Home</a></li>
 				<li><a href="#about">About Us</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Skills</a></li>
+				<li><a href="#service">Services</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
 			<a href="#" class="btn">Subscribe</a>
@@ -29,8 +28,8 @@
 		<div class="content">
 			<div class="right">
 				<h4>Hello, my name is</h4>
-				<h1>Ben <span>Iraa</span></h1>
-				<h3>I'am a Web Developer.</h3>
+				<h1>Aimable <span>Joffery</span></h1>
+				<h3>I'am a Frontend Developer.</h3>
 				<div class="newslatter">
 					<form>
 						<input type="email" name="email" id="mail" placeholder="Enter Your Email">
@@ -40,7 +39,7 @@
 			</div>
             <div class="center">q</div>
 			<div class="left">
-				<img src="img/ben.jpg" alt=""  width="300px" height="300px">
+				<img src="img/aimab.jpg" alt="">
 			</div>
 		
 		</div>
@@ -49,15 +48,14 @@
 	<!----About section start---->
 	<section class="about" name="about" id="about">
 		<div class="main">
-			<img src="img/ben_iraa_275684318_1452503341814583_7772056075516665625_n.jpg">
+			<img src="img/joo.JPG">
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
-				<p>I'm a expert web design and Web development,
-					I'm a Front End Developer. I have a Passion for 
-				   Creating Clean, Beautiful, Interactive, Minimalistic, 
-				   Responsive and User Friendly UI, Developed by 
-				   Modular, Scalable and Functional Code.</p>
+				<p>I am a frontend web developer. I can provide clean 
+					code and pixel perfect design. I also make website
+					 more & more interactive with web animations
+					.</p>
 				<button type="button">Let's Talk</button>
 			</div>
 		</div>
@@ -140,14 +138,14 @@
 
 	<!------footer start--------->
 	<footer>
-		<p>Ben Iraa</p>
+		<p>Aimable</p>
 		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
 		<div class="social">
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
 			<a href="#"><i class="fab fa-dribbble"></i></a>
 		</div>
-		<p class="end">CopyRight By Ben  Iraa</p>
+		<p class="end">&copy; CopyRight By Joffery 2023</p>
 	</footer>
 </body>
 </html>
